# llm-translater

./: .gitignore  README.md  ai_client.py  dialog.py  english_assistant.py  pyproject.toml
src/: main.py
src/util/: __init__.py  app_situation.py
