# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-translater"
version = "1.0.0"
dependencies = [
  "openai",
  "dotenv",
  "pyperclip",
  "pyobjc-framework-cocoa",
]
requires-python = ">=3.8"
authors = [
  {name = "lanzifeng", email = ""},
]
maintainers = [
  {name = "lanzifeng", email = ""}
]
description = "my demo!"
keywords = ["llm"]

# Hatch 特定配置
[tool.hatch.build]
include = ["src/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.setuptools.packages.find]
where = ["src"]  # 指定包在src目录下

